--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "finance-manager-adonisjs-api",
+  "name": "finance-management-adonisjs-api",
   "version": "1.0.0",
+  "author": "Victor Tavares",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "node ace serve --watch",
@@ -18,6 +20,7 @@
       "prettier"
     ],
     "rules": {
+      "@typescript-eslint/naming-convention": "off",
       "prettier/prettier": [
         "error"
       ]
@@ -40,6 +43,8 @@
     "@adonisjs/assembler": "^5.9.3",
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.2.1",
+    "@types/source-map-support": "^0.5.6",
+    "@types/uuid": "^8.3.4",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
@@ -52,10 +57,19 @@
     "youch-terminal": "^2.1.5"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.2.3",
+    "@adonisjs/bouncer": "^2.3.0",
     "@adonisjs/core": "^5.8.0",
+    "@adonisjs/limiter": "^1.0.1",
+    "@adonisjs/lucid": "^18.2.0",
     "@adonisjs/repl": "^3.1.0",
+    "adonis5-swagger": "^1.4.1",
+    "luxon": "^3.0.4",
+    "pg": "^8.8.0",
+    "phc-bcrypt": "^1.0.7",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "uuid": "^9.0.0"
   }
 }
