--- a/docs/swagger/auth.yml
+++ b/docs/swagger/auth.yml
@@ -24,6 +24,8 @@
         description: Created
       400:
         description: Bad Request
+      422:
+        description: Unprocessable Entity
 
 /api/v1/auth/logout:
   post:
