--- a/docs/swagger/transactions.yml
+++ b/docs/swagger/transactions.yml
@@ -39,6 +39,8 @@
         description: Unprocessable Entity
       401:
         description: Unauthorized
+      400:
+        description: Bad Request
 
 /api/v1/transactions/{id}:
   get:
