--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -15,12 +15,7 @@
     "Database": "database",
     "Contracts": "contracts"
   },
-  "preloads": [
-    "./start/routes",
-    "./start/kernel",
-    "./start/bouncer",
-    "./start/limiter"
-  ],
+  "preloads": ["./start/routes", "./start/kernel", "./start/bouncer", "./start/limiter"],
   "providers": [
     "./providers/AppProvider",
     "@adonisjs/core",
@@ -30,21 +25,15 @@
     "@adonisjs/limiter",
     "adonis5-swagger"
   ],
-  "aceProviders": [
-    "@adonisjs/repl"
-  ],
+  "aceProviders": ["@adonisjs/repl"],
   "tests": {
     "suites": [
       {
         "name": "functional",
-        "files": [
-          "tests/functional/**/*.spec(.ts|.js)"
-        ],
+        "files": ["tests/functional/**/*.spec(.ts|.js)"],
         "timeout": 60000
       }
     ]
   },
-  "testProviders": [
-    "@japa/preset-adonis/TestsProvider"
-  ]
+  "testProviders": ["@japa/preset-adonis/TestsProvider"]
 }
